# clanker-spanker

./: PLAN.md  README.md  package-lock.json  package.json
.codex/environments/: environment.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: monitor-pr-loop.sh  one-time-pr-history-sanitizer.sh
src-tauri/src/: api.rs  db.rs  dock.rs  global_settings.rs  hotkey.rs  lib.rs  main.rs  monitor.rs  notifications.rs  orchestrator.rs  process.rs  settings.rs  sleep_prevention.rs  tray.rs
src/components/board/: Board.tsx  CardGrid.tsx  Column.tsx  DoneChip.tsx  PRCard.tsx  PRCardSkeleton.tsx  SortablePRCard.tsx
src/components/filters/: FilterPanel.tsx
src/components/layout/: Header.tsx  RepoManager.tsx  RepoSelector.tsx
src/components/settings/: SettingsDialog.tsx
src/components/terminal/: FullTerminal.tsx  MiniTerminal.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  keyboard-shortcuts.tsx  progress.tsx  skeleton.tsx  toast.tsx
src/hooks/: useAutostart.ts  useDismissedPRs.ts  useFilters.ts  useKeyboardNav.ts  useMonitors.ts  usePROrder.ts  usePRs.ts  useRepos.ts  useSettings.ts  useTheme.ts  useToast.ts
src/lib/: filters.ts  tauri.ts  theme.ts  time.ts  types.ts
